--- a/Angela_yu/CSS - My Site/css/styles.css
+++ b/Angela_yu/CSS - My Site/css/styles.css
@@ -1,3 +1,27 @@
-body{
+/* body{
+    margin: 0;
+} */
+
+h1{
+    margin-top: 0;
+}
+.top-container{
+    background-color: #E4F9F5;
+    height: 200px;
+  width: 200px;
+  border: 10px solid black;
+
+}
+.middle-container{
     background-color: blue;
+  height: 200px;
+  width: 200px;
+  border: 20px solid black;
+  /* margin: auto; */
+}
+
+.bottom-container{
+    background-color: brown;
+    height: 200px;
+    width: 200px;
 }
